<resources>
    <string name="app_name">Virtual_Market</string>
    <string name="send_to">Send_To</string>
    <string name="back_button">Back</string>
    <string name="order_confirm_button">Confirm</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name_register">Nama Lengkap</string>
    <string name="hint_address_register">Alamat</string>
    <string name="hint_phone_register">Nomor Telepon</string>
    <string name="err_msg_name">Nama Lengkap harus diisi</string>
    <string name="err_msg_address">Alamat harus diisi</string>
    <string name="err_msg_phone">Nomor Telepon harus diisi</string>

    <string name="login_button">Masuk</string>
    <string name="register_button">Registrasi</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_profile">Profil Diri</string>
    <string name="nav_feedback">Ulasan</string>
    <string name="nav_login">Masuk</string>
    <string name="nav_logout">Keluar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
